css: minor spacing issues fixed

--- a/ui/layouts/armylist/style.css
+++ b/ui/layouts/armylist/style.css
@@ -22,14 +22,14 @@
 			}
 		}
 
-		div.stats {
-			div {
+		.stats {
+			span {
 				display: inline;
 				span.print-only::before {
 					content: "\0020";
 				}
 			}
-			& > div:not(:first-child) {
+			& > span:not(:first-child) {
 				margin-left: 0.5em;
 				padding-left: 0.5em;
 				border-left: 1px solid #000;
@@ -72,11 +72,11 @@
 			display: flex;
 			flex-direction: row;
 			column-gap: 0.5em;
-		}
-		button {
-			flex: 1;
-			border-radius: 0.5em;
-			padding: 0.3em;
+			button {
+				flex: 1;
+				border-radius: 0.5em;
+				padding: 0.3em;
+			}
 		}
 	}
 }
